--- a/Help/__FORM__/view/__FORM__AllView.xml
+++ b/Help/__FORM__/view/__FORM__AllView.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<DataView  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:dsp="http://www.gappex.com/sfp/DataSource/Parameters" Ident="__Form__AllView" SegmentType="__ModuleName__" TitleResourceKey="__Form__AllView___ModuleName__" XGroupTitleResourceKey="__Form__Group___ModuleName__" Priority="100" XIsManualPaging="true" XIsGeneratePaging="false" XDefaultFilterIdent="__Form__Filter" CountColorCssClass="primary" PackageIdent="__ModuleName__">
+<DataView xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:dsp="http://www.gappex.com/sfp/DataSource/Parameters" xmlns:dsf="http://www.gappex.com/sfp/DataSource/Froms" Ident="__Form__AllView" SegmentType="__ModuleName__Segment" TitleResourceKey="__Form__AllView___ModuleName__" XGroupTitleResourceKey="__Form__Group___ModuleName__" Priority="100" XIsManualPaging="true" XIsGeneratePaging="false" XDefaultFilterIdent="__Form__Filter" CountColorCssClass="primary" PackageIdent="__ModuleName__Package">
   <AccessPermissions>
     <string>__ModuleName__</string>
   </AccessPermissions>
@@ -33,12 +33,23 @@
         </SQL>
       </Column>
 		</Columns>
+    <Froms>
+      <!-- <dsf:From Ident="accCreator">
+        <dsf:Columns>
+          <dsf:string>__ColumnIdent__</dsf:string>
+        </dsf:Columns>
+        <dsf:SQL>
+          INNER JOIN usr.__JoinedForm__ AS __JoinedFormAlias__ ON __JoinedFormAlias__.ID = __FormAlias__.__ColumnIdent__
+        </dsf:SQL>
+      </dsf:From> -->
+    </Froms>
 		<SQL>
       SELECT 
         __FormAlias__.ID
         #ADDCOLUMN#
       FROM usr.__Form__ AS __FormAlias__
       INNER JOIN dbo.Account AS accCreator ON accCreator.ID = __FormAlias__.AccountID
+      #ADDFROM#
       WHERE
         __FormAlias__.[State] != @DeletedState
         AND #PERMISSION[__Form__(__FormAlias__)]# /*#FILTER#*/
@@ -52,6 +63,7 @@
             #ADDCOLUMN#
           FROM usr.__Form__ AS __FormAlias__
           INNER JOIN dbo.Account AS acc ON acc.ID = __FormAlias__.AccountID
+          #ADDFROM#
           WHERE
             __FormAlias__.[State] != @DeletedState
             AND #PERMISSION[__Form__(__FormAlias__)]# #FILTER#
